<resources>
    <string name="app_name">ConstLayout</string>
    <string name="wcText">Welcome to Cygnature!</string>
    <string name="team">Project Team</string>
    <string name="mentor">Project Mentor</string>

    <!--Components-->
    <string name="s_txt_juhi">Juhi Kaushik</string>

    <string name="s_txt_rishabh">Rishi Mistry</string>
    <string name="s_txt_pratik">Pratik Goswami</string>

    <string name="s_txt_rishabh">Rishabh Mistry</string>
    <string name="s_txt_pratik">Pratik Goswami</string>

    <string name="s_txt_parashar">Parashar Dhamecha</string>
    <string name="s_txt_urvish">Urvish Xyz</string>

    <string name="s_btn_juhi">Hi Juhi</string>
    <string name="s_btn_rishabh">Hi Rishi</string>
    <string name="s_btn_pratik">Hi Pratik</string>
    <string name="s_btn_parashar">Hi Parashar</string>
    <string name="s_btn_urvish">Urvish Xyz</string>

</resources>
