<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:minHeight="250dp">

    <TextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wcText"
            android:textColor="@color/black"
            android:textSize="@dimen/welcomeText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"


            app:layout_constraintVertical_bias="0.062"
    />
    <TextView
            android:textColor="@color/black"
            android:id="@+id/txt_team"
            android:text="@string/team"
            android:textSize="@dimen/team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_hello"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.086"/>
    <TextView
            android:text="@string/s_txt_juhi"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView2" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_hello" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"/>
    <TextView
            android:text="@string/s_txt_rishabh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"/>
    <TextView
            android:text="@string/s_txt_pratik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"/>
    <TextView
            android:text="@string/s_txt_parashar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"/>
    <Button
            android:textAllCaps="false"
            android:text="@string/s_btn_juhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_juhi"
            android:layout_marginTop="88dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_hello" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.961"/>
    <Button
            android:textAllCaps="false"
            android:text="@string/s_btn_rishabh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_rishabh" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_juhi" android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:textAllCaps="false"
            android:text="@string/s_btn_pratik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_pratik" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_rishabh" android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.979"/>
    <Button
            android:textAllCaps="false"
            android:text="@string/s_btn_parashar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_parashar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/bt_pratik"
            app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.945"/>
    <TextView
            android:text="@string/mentor"
            android:textSize="@dimen/team"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/s_txt_urvish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/button5" app:layout_constraintHorizontal_bias="0.297"
            app:layout_constraintVertical_bias="0.502"/>
    <Button
            android:text="@string/s_btn_urvish"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="36dp"
            android:layout_marginTop="100dp" app:layout_constraintTop_toBottomOf="@+id/bt_parashar"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>